fix/small bug with picture overflow in itemModal

--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -26,6 +26,7 @@
     width: 100%;
     min-height: 33vh; 
     border-radius: 12px;
+    overflow: hidden;
 }
 
   .modal__close {
